<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>sample</groupId>
    <artifactId>javaFxMitmagic</artifactId>
    <version>1.4.6-SNAPSHOT</version>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>11</maven.compiler.release>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <javafx.version>11.0.1</javafx.version>
        <mainClass>sample.AppLauncher</mainClass>
    </properties>
    <repositories>
        <repository>
            <id>xwintop-maven</id>
            <url>https://xwintop.gitee.io/maven/repository</url>
        </repository>
    </repositories>
    <dependencies>
        <!--自动生成get/set-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.22</version>
            <scope>provided</scope>
        </dependency>
        <!--javafx-->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <!--ui-->
        <dependency>
            <groupId>com.jfoenix</groupId>
            <artifactId>jfoenix</artifactId>
            <version>9.0.10</version>
        </dependency>
        <dependency>
            <groupId>eu.hansolo</groupId>
            <artifactId>tilesfx</artifactId>
            <version>11.45</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.1.0</version>
        </dependency>
        <!--rxtx串口通信-->
        <dependency>
            <groupId>com.fazecast</groupId>
            <artifactId>jSerialComm</artifactId>
            <version>2.7.0</version>
        </dependency>
        <!--java工具包-->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-imaging</artifactId>
            <version>1.0-alpha2</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>20030203.000550</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>20041127.091804</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>4.4</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>1.9</version>
        </dependency>
        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>20030211.134440</version>
        </dependency>
        <dependency>
            <groupId>org.dom4j</groupId>
            <artifactId>dom4j</artifactId>
            <version>2.1.3</version>
        </dependency>
        <dependency>
            <groupId>com.xwintop</groupId>
            <artifactId>xcore</artifactId>
            <version>0.0.4-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!--日志-->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>2.0.0-alpha1</version>
        </dependency>
        <dependency>
            <groupId>xml-apis</groupId>
            <artifactId>xml-apis-ext</artifactId>
            <version>1.3.04</version>
        </dependency>
    </dependencies>
    <build>
        <resources>
            <resource>
                <!-- 这里是放在 src/main/resources-->
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*.properties</include>
                    <include>**/*.fxml</include>
                    <include>**/fonts/**</include>
                    <include>**/*.css</include>
                    <include>**/img/**</include>
                    <include>**/webview/**</include>
                </includes>
                <filtering>false</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <compilerArgument>-Xlint:unchecked</compilerArgument>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.4</version>
                <configuration>
                    <stripDebug>true</stripDebug>
                    <noHeaderFiles>true</noHeaderFiles>
                    <noManPages>true</noManPages>
                    <release>${maven.compiler.release}</release>
                    <jlinkImageName>${project.artifactId}</jlinkImageName>
                    <jlinkZipName>${project.artifactId}-${project.version}</jlinkZipName>
                    <launcher>${project.artifactId}_launcher</launcher>
                    <mainClass>${mainClass}</mainClass>
                    <options>
                        <option>-Dfile.encoding=GBK</option>
                        <option>--add-exports</option><option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
                    </options>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <shadedClassifierName>project-classifier</shadedClassifierName>
                            <outputFile>target/${project.artifactId}-${project.version}-shade.jar</outputFile>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>${mainClass}</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>io.github.fvarrui</groupId>
                <artifactId>javapackager</artifactId>
                <version>1.5.1</version>
                <configuration>
                    <!--在应用程序中嵌入自定义的JRE-->
                    <bundleJre>true</bundleJre>
                    <mainClass>${mainClass}</mainClass>
                    <!--为该应用程序生成安装程序-->
                    <generateInstaller>true</generateInstaller>
                </configuration>
                <executions>
                    <execution>
                        <id>package-for-windows</id>
                        <phase>package</phase>
                        <goals>
                            <goal>package</goal>
                        </goals>
                        <configuration>
                            <!--将所有依赖项（JAR文件）与应用程序捆绑在一起-->
                            <copyDependencies>true</copyDependencies>
                            <!--应用名称-->
                            <name>${project.name}</name>
                            <!--要显示的应用名称-->
                            <displayName>要显示的应用名称</displayName>
                            <!--应用程序图标文件（PNG，XPM，ICO或ICNS）的路径-->
                            <assetsDir>${project.basedir}\assets</assetsDir>
                            <!--应用程式网站网址-->
                            <url>应用程式网站网址</url>
                            <!--项目介绍-->
                            <description>项目介绍</description>
                            <!--项目版本-->
                            <version>${project.version}</version>
                            <!--机构名称-->
                            <organizationName>mitmagic</organizationName>
                            <!--组织网站网址-->
                            <organizationUrl>http://www.mitmagic.com/</organizationUrl>
                            <!--组织电子邮件-->
                            <organizationEmail>emma@mitmagic.com</organizationEmail>
                            <platform>windows</platform>
                            <outputDirectory>${project.build.directory}/${project.name}/windows</outputDirectory>
                            <winConfig>
                                <!--生成MSI安装程序-->
                                <generateMsi>true</generateMsi>
                                <!--使用设置语言映射-->
                                <setupLanguages>
                                    <chinesesimp>compiler:Default.isl</chinesesimp>
                                    <english>compiler:Languages\English.isl</english>
                                </setupLanguages>
                                <!--安装程序将会显示“选择目标位置”向导页面-->
                                <disableDirPage>false</disableDirPage>
                                <!--安装程序将会显示“选择开始菜单文件夹”向导页面-->
                                <disableProgramGroupPage>false</disableProgramGroupPage>
                                <!--安装程序将会显示“安装完成”向导页面-->
                                <disableFinishedPage>false</disableFinishedPage>
                                <!--装程序将要求创建桌面图标-->
                                <createDesktopIconTask>true</createDesktopIconTask>
                            </winConfig>
                        </configuration>
                    </execution>
                    <execution>
                        <id>package-for-mac</id>
                        <phase>package</phase>
                        <goals>
                            <goal>package</goal>
                        </goals>
                        <configuration>
                            <!--将所有依赖项（JAR文件）与应用程序捆绑在一起-->
                            <copyDependencies>true</copyDependencies>
                            <!--应用名称-->
                            <name>${name}</name>
                            <!--要显示的应用名称-->
                            <displayName>要显示的应用名称</displayName>
                            <!--应用程序图标文件（PNG，XPM，ICO或ICNS）的路径-->
                            <assetsDir>${project.basedir}\assets</assetsDir>
                            <!--应用程式网站网址-->
                            <url>应用程式网站网址</url>
                            <!--项目介绍-->
                            <description>项目介绍</description>
                            <!--项目版本-->
                            <version>${project.version}</version>
                            <!--机构名称-->
                            <organizationName>mitmagic</organizationName>
                            <!--组织网站网址-->
                            <organizationUrl>http://www.mitmagic.com/</organizationUrl>
                            <!--组织电子邮件-->
                            <organizationEmail>emma@mitmagic.com</organizationEmail>
                            <platform>mac</platform>
                            <outputDirectory>${project.build.directory}/${project.name}/mac</outputDirectory>
                            <macConfig>

                            </macConfig>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>